# mlops-ml-pipeline-lab

./: Makefile  README.md  conda.yaml  pyproject.toml
ml_houseprice_prediction/src/ml_houseprice_prediction/data_preprocessing/: preprocessing.py
ml_houseprice_prediction/src/ml_houseprice_prediction/data_splits/: splits.py
ml_houseprice_prediction/src/ml_houseprice_prediction/train_model/: train.py
notebook/: house_price_prediction.ipynb
